--- a/src/assets/style/Params.scss
+++ b/src/assets/style/Params.scss
@@ -1,4 +1,5 @@
-$background: #24292F;
-$text: #333333;
-$primary: #D51820;
-$secondary: #29A643;
+$palette-background: #24292F;
+$palette-text-dark: #333333;
+$palette-text-light: #FFFFFF;
+$palette-primary: #D51820;
+$palette-secondary: #29A643;
