--- a/src/components/public/features/signin/Signin.scss
+++ b/src/components/public/features/signin/Signin.scss
@@ -1,6 +1,6 @@
 @use './../../../../assets/style/Params' as p;
 
-main {
+main[data-area=public] {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,55 +22,60 @@ main {
     border: solid 1px rgba(255, 255, 255, 0.5);
     gap: 2rem;
     padding: 5rem 3rem;
-    
-}
-.form-container:before {
-    content: "";
-    position: absolute;
-    background-image: url('./../../../../assets/images/burger.png');
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-repeat: no-repeat;
-    background-position: -50% center;
-    background-size: 140% auto;
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.2);
-}
 
-.form-container:after {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    filter: blur(10px);
-    margin: -20px;
-}
+    &:before {
+        content: "";
+        position: absolute;
+        background-image: url('./../../../../assets/images/burger.png');
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-repeat: no-repeat;
+        background-position: -40% center;
+        background-size: 150% auto;
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.2);
+    }
 
-.form-container .form-logo {
-    max-width: 80%;
-    height:4rem;
-    margin-bottom: 3rem;
-}
+    &:after {
+        content: "";
+        position: absolute;
+        background: inherit;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+        filter: blur(10px);
+        margin: -20px;
+    }
 
-.form-container input,
-.form-container button {
-    width: 80%;
-    max-width: 20rem;
-    font-size: 1rem;
-}
+    .form-logo {
+        max-width: 80%;
+        height:4rem;
+        margin-bottom: 3rem;
+    }
 
-.form-container button {
-    margin-top: 3rem;
-    background-color: #FFFFFF;
-}
-.form-container button:hover {
-    color: p.$palette-primary;
+    input,
+    button {
+        width: 80%;
+        max-width: 20rem;
+        font-size: 1rem;
+    }
+
+    button {
+        margin-top: 3rem;
+        background-color: #FFFFFF;
+        font-weight: 600;
+        &:hover {
+            color: p.$palette-primary;
+        }
+    }
+
+    .feedback-error {
+        text-shadow: 0px 0px 4px #000000;
+    }
 }
