--- a/src/components/public/features/signin/Signin.scss
+++ b/src/components/public/features/signin/Signin.scss
@@ -4,6 +4,7 @@ main[data-area=public] {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 2rem;
 }
 
 .form-container {
