--- a/src/assets/style/Params.scss
+++ b/src/assets/style/Params.scss
@@ -1,4 +1,4 @@
-$palette-background: #24292F;
+$palette-background: #050507;
 $palette-text-dark: #333333;
 $palette-text-light: #FFFFFF;
 $palette-primary: #D51820;
