--- a/src/components/private/features/editor/Editor.scss
+++ b/src/components/private/features/editor/Editor.scss
@@ -243,4 +243,24 @@
     }
 }
 
+.loader {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    @keyframes rotation {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(359deg);
+        }
+    }
+
+    img {
+        width: 4rem;
+        animation: rotation 2s linear infinite;
+    }
+}
